# rusty

./: Cargo.toml  LICENSE  README.md  boot.asm  boot.com
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
